# rl-game-4

./: Cargo.toml  README.md
networks/: temp_chase.network  temp_flee.network
src/: main.rs
src/art/: Cargo.toml
src/art/src/: lib.rs
src/components/: Cargo.toml
src/components/src/: camera.rs  lib.rs  moving.rs  player.rs  render_data.rs  render_id.rs  transform.rs
src/core/: Cargo.toml
src/core/src/: event_clump.rs  event_router.rs  game.rs  handle_events.rs  lib.rs
src/dependencies/: Cargo.toml
src/dependencies/src/: lib.rs
src/event/: Cargo.toml
src/event/src/: lib.rs
src/event_enums/: Cargo.toml
src/event_enums/src/: ai_x_control.rs  control_x_player.rs  feeder_x_ai.rs  lib.rs  main_x_control.rs  main_x_render.rs  score_x_feeder.rs
src/graphics/: Cargo.toml
src/graphics/src/: lib.rs  pipeline.rs  rl_glutin.rs  rl_sdl2.rs  shaders.rs  texture.rs
src/math/: Cargo.toml
src/math/src/: lib.rs  ortho_helper.rs
src/neural/: Cargo.toml
src/neural/src/: evolution.rs  lib.rs  network.rs
src/systems/: Cargo.toml
src/systems/src/: ai.rs  control.rs  feeder.rs  lib.rs  moving.rs  player.rs  render.rs  score.rs
src/utils/: Cargo.toml
src/utils/src/: fps_counter.rs  lib.rs
