[package]
name = "rl-game-4"
version = "0.1.0"
authors = ["Kiley Owen <yelikdev@gmail.com>"]

[dependencies]
log = "0.3.6"

art = { path="src/art" }
components = { path="src/components" }
core = { path="src/core" }
dependencies = { path="src/dependencies" }
event = { path="src/event" }
event_enums = { path="src/event_enums" }
graphics = { path="src/graphics" }
math = { path="src/math" }
systems = { path="src/systems" }
utils = { path="src/utils" }
