[package]
name = "art"
version = "0.1.0"
authors = ["Kiley Owen <yelikdev@gmail.com>"]

[dependencies]
# art = { path="../art" }
# components = { path="../components" }
# core = { path="../core" }
dependencies = { path="../dependencies" }
# event = { path="../event" }
# event_enums = { path="../event_enums" }
# graphics = { path="../graphics" }
# math = { path="../math" }
# systems = { path="../systems" }
# utils = { path="../utils" }
