[package]
name = "dependencies"
version = "0.1.0"
authors = ["Kiley Owen <yelikdev@gmail.com>"]

[dependencies]
cgmath = "0.12.0"
env_logger = "0.3.5"
find_folder = "0.3.0"
getopts = "0.2"
gfx = "0.12.1"
gfx_device_gl = "0.11.2"
gfx_window_glutin = "0.12.0"
gfx_window_sdl = "0.3.0"
glutin = "0.6.1"
image = "0.10.3"
log = "0.3.6"
rand = "0.3.14"
rustc-serialize = "0.3"
sdl2 = "0.18.0"
specs = "0.7.0"
time = "0.1.35"
