[package]
name = "graphics"
version = "0.1.0"
authors = ["Kiley Owen <yelikdev@gmail.com>"]

[dependencies]
gfx = "0.12.1"

# art = { path="../art" }
# components = { path="../components" }
# core = { path="../core" }
dependencies = { path="../dependencies" }
# event = { path="../event" }
# graphics = { path="../graphics" }
# math = { path="../math" }
# systems = { path="../systems" }
utils = { path="../utils" }
